--- a/styles/MatchDetailsScoreboard.module.css
+++ b/styles/MatchDetailsScoreboard.module.css
@@ -2,9 +2,16 @@
 .td {
     border-collapse: collapse;
     border-spacing: 15px;
+    padding: 15px 0 15px 0;
+    table-layout: fixed;
 }
 
 .td {
     border: 1px solid black;
     text-align: center;
+}
+
+.th {
+    padding: 0 10px 5px 10px;
+    word-wrap: break-word;
 }
